<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>net.bitbylogic</groupId>
        <artifactId>APIByLogic</artifactId>
        <version>2024.6</version>
    </parent>

    <artifactId>APIByLogic-Spigot</artifactId>
    <packaging>jar</packaging>

    <name>APIByLogic Spigot</name>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>true</minimizeJar>
                            <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                            <relocations>
                                <relocation>
                                    <pattern>org.bstats</pattern>
                                    <shadedPattern>net.bitbylogic.apibylogic.bstats</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.jeff_media.updatechecker</pattern>
                                    <shadedPattern>net.bitbylogic.apibylogic.updatechecker</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.cryptomorin.xseries</pattern>
                                    <shadedPattern>net.bitbylogic.apibylogic.xseries</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>co.aikar.commands</pattern>
                                    <shadedPattern>net.bitbylogic.apibylogic.acf</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>co.aikar.locales</pattern>
                                    <shadedPattern>net.bitbylogic.apibylogic.locales</shadedPattern>
                                </relocation>
                            </relocations>
                            <filters>
                                <filter>
                                    <artifact>net.bitbylogic:APIByLogic-Core</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                            </filters>
                            <artifactSet>
                                <excludes>
                                    <exclude>net.bytebuddy:byte-buddy:*</exclude>
                                    <exclude>org.jodd:jodd-bean:*</exclude>
                                    <exclude>javax.cache:cache-api:*</exclude>
                                    <exclude>io.projectreactor:reactor-core:*</exclude>
                                    <exclude>io.reactivex.rxjava3:rxjava:*</exclude>
                                </excludes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>aikar</id>
            <url>https://repo.aikar.co/content/groups/aikar/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>jeff-media-public</id>
            <url>https://hub.jeff-media.com/nexus/repository/jeff-media-public/</url>
        </repository>
        <repository>
            <id>minecraft-libraries</id>
            <name>Minecraft Libraries</name>
            <url>https://libraries.minecraft.net/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Spigot -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- Spigot NMS 1.20.4 -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot</artifactId>
            <version>1.21-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- APIByLogic Core -->
        <dependency>
            <groupId>net.bitbylogic</groupId>
            <artifactId>APIByLogic-Core</artifactId>
            <version>2024.6</version>
            <scope>compile</scope>
        </dependency>

        <!-- BStats -->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.0.2</version>
            <scope>compile</scope>
        </dependency>

        <!-- XSeries (Reflection) -->
        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>XSeries</artifactId>
            <version>11.2.0</version>
            <scope>compile</scope>
        </dependency>

        <!-- XSeries XSkull -->
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <version>6.0.54</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>co.aikar</groupId>
            <artifactId>acf-paper</artifactId>
            <version>0.5.1-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>LATEST</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.jeff_media</groupId>
            <artifactId>SpigotUpdateChecker</artifactId>
            <version>3.0.3</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

</project>
